--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang ="fr">
 <head>
   <meta charset ="UTF -8" / >
-  <title>Hello HTML </title>
+  <title>Hello World</title>
+  <link rel="shortcut icon" href="favicon.png">
 </head>
 <body>
   <header>
