Change project structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset ="UTF -8" / >
   <title>Hello World</title>
-  <link rel="shortcut icon" href="favicon.png">
+  <link rel="shortcut icon" href="images/favicon.png">
 </head>
 <body>
   <header>
