--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset ="UTF -8" / >
   <title>Hello World</title>
   <link rel="shortcut icon" href="images/favicon.png">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <header>
-      <p>Hello World</<p>
+    <nav>Menu de navigation</nav>
   </header>
 </body>
 </html>
