Add Image on menu

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 
 <body>
   <ul>
+    <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
     <li><a class="active" href="#home">Acceuil</a></li>
-    <li><a href="#news">Materiel</a></li>
+    <li><a href="materiel.html">Materiel</a></li>
     <li><a href="#contact">Historique</a></li>
     <li><a href="#about">Source</a></li>
   </ul>
