--- a/materiel.html
+++ b/materiel.html
@@ -7,5 +7,11 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+  <ul>
+    <li><a href="index.html" >Acceuil</a></li>
+    <li><a class="active" href="#Materiel">Materiel</a></li>
+    <li><a href="#contact">Historique</a></li>
+    <li><a href="#about">Source</a></li>
+  </ul>
 </body>
 </html>
