--- a/materiel.html
+++ b/materiel.html
@@ -1,7 +1,7 @@
-<! DOCTYPE html >
+<!DOCTYPE html >
 <html lang ="fr">
 <head>
-  <meta charset ="UTF -8" / >
+  <meta charset ="UTF-8">
   <title>Hello World</title>
   <link rel="shortcut icon" href="images/favicon.png">
   <link rel="stylesheet" href="css/index.css">
