Add background image

--- a/materiel.html
+++ b/materiel.html
@@ -7,11 +7,19 @@
   <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
-  <ul>
-    <li><a href="index.html" >Acceuil</a></li>
-    <li><a class="active" href="#Materiel">Materiel</a></li>
-    <li><a href="#contact">Historique</a></li>
-    <li><a href="#about">Source</a></li>
-  </ul>
+  <main>
+    <nav>
+      <ul>
+        <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
+        <li><a href="index.html" >Acceuil</a></li>
+        <li><a class="active" href="#Materiel">Materiel</a></li>
+        <li><a href="#contact">Historique</a></li>
+        <li><a href="#about">Source</a></li>
+      </ul>
+    </nav>
+    <article class="">
+
+    </article>
+  </main>
 </body>
 </html>
