--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 </head>
 
 <body>
-  <ul>
-    <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
-    <li><a class="active" href="#home">Acceuil</a></li>
-    <li><a href="materiel.html">Materiel</a></li>
-    <li><a href="#contact">Historique</a></li>
-    <li><a href="#about">Source</a></li>
-  </ul>
+  <main>
+    <article class="container">
+      <nav class="Menu">
+        <ul>
+          <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
+          <li><a class="active" href="#home">Acceuil</a></li>
+          <li><a href="materiel.html">Materiel</a></li>
+          <li><a href="#contact">Historique</a></li>
+          <li><a href="#about">Source</a></li>
+        </ul>
+      </nav>
+      <section class="Titre">
+      <h1>Le metier de DJ</h1>
+      </section>
+    </article>
+  </main>
 </body>
 </html>
