Add grid layout

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <article class="container">
-      <nav class="Menu">
+      <section class="Menu">
         <ul>
           <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
           <li><a class="active" href="#home">Acceuil</a></li>
@@ -18,11 +18,11 @@
           <li><a href="#contact">Historique</a></li>
           <li><a href="#about">Source</a></li>
         </ul>
-      </nav>
+      </section>
       <section class="Titre">
       <h1>Le metier de DJ</h1>
-      </section>
-    </article>
+    </section>
+  </article>
   </main>
 </body>
 </html>
