--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <section class="Menu">
         <ul>
           <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
-          <li><a class="active" href="#home">Acceuil</a></li>
+          <li><a class="active" href="#home">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
           <li><a href="#contact">Historique</a></li>
           <li><a href="#about">Source</a></li>
@@ -28,7 +28,11 @@
         Certaines personnes classifient les DJ en deux catégories ceux qui travaille en tant qu'annimateur dans les evenements ponctuel et les DJ
         qui travaille dans des Clubs/Boite de Nuit/Festivals.
         Jusqu'a présent il n'existe encore aucun diplôme de DJ cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" id="link">UCPA</a> délivre un certificat "d'animateur musical et scénique"
-        
+
+      </p>
+    </section>
+    <section class="texte-2">
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl nulla, lacinia a feugiat at, auctor sed purus. Integer mollis orci vel mi pellentesque, tristique facilisis risus scelerisque. Donec non urna urna. Vestibulum massa felis, accumsan quis ullamcorper ac, sollicitudin ut lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur accumsan aliquam eleifend. Nulla ligula sapien, accumsan vestibulum vehicula sit amet, blandit a nisi. Proin vehicula sollicitudin tellus. Maecenas laoreet nisl at enim hendrerit, at tempor nisl porttitor. Nullam est nisi, pretium a rhoncus eget, gravida ut est. Sed gravida commodo nunc, nec fringilla massa commodo sed. Morbi consequat efficitur nulla at ultrices. Vestibulum nisl turpis, commodo vestibulum cursus non, pellentesque id est. Nam fermentum, lectus sed euismod luctus, turpis lorem condimentum odio, quis vehicula urna metus id urna. Maecenas et felis id lectus rhoncus rhoncus.
       </p>
     </section>
   </article>
