--- a/materiel.html
+++ b/materiel.html
@@ -11,7 +11,7 @@
     <nav>
       <ul>
         <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
-        <li><a href="index.html" >Acceuil</a></li>
+        <li><a href="index.html" >Accueil</a></li>
         <li><a class="active" href="#Materiel">Materiel</a></li>
         <li><a href="#contact">Historique</a></li>
         <li><a href="#about">Source</a></li>
