--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang ="fr">
 <head>
   <meta charset ="UTF-8"/>
-  <title>Hello World</title>
+  <title>Le metier de DJ</title>
   <link rel="shortcut icon" href="images/favicon.png">
   <link rel="stylesheet" href="css/index.css">
 </head>
@@ -32,8 +32,13 @@
       </p>
     </section>
     <section class="texte-2">
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisl nulla, lacinia a feugiat at, auctor sed purus. Integer mollis orci vel mi pellentesque, tristique facilisis risus scelerisque. Donec non urna urna. Vestibulum massa felis, accumsan quis ullamcorper ac, sollicitudin ut lorem. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur accumsan aliquam eleifend. Nulla ligula sapien, accumsan vestibulum vehicula sit amet, blandit a nisi. Proin vehicula sollicitudin tellus. Maecenas laoreet nisl at enim hendrerit, at tempor nisl porttitor. Nullam est nisi, pretium a rhoncus eget, gravida ut est. Sed gravida commodo nunc, nec fringilla massa commodo sed. Morbi consequat efficitur nulla at ultrices. Vestibulum nisl turpis, commodo vestibulum cursus non, pellentesque id est. Nam fermentum, lectus sed euismod luctus, turpis lorem condimentum odio, quis vehicula urna metus id urna. Maecenas et felis id lectus rhoncus rhoncus.
-      </p>
+      <section class="container-2">
+        <section class = "gauche">
+          <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class"img-gauche">
+        <section class = "droite">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id porttitor odio. Nullam ullamcorper molestie mauris eu vulputate. Etiam lobortis massa a egestas volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam vitae lacus mauris. Donec gravida velit id lacus convallis varius. Integer eu ultricies enim. Praesent molestie nulla ipsum, sed fringilla lacus dapibus vel.</p>
+        </section>
+      </section>
     </section>
   </article>
   </main>
