--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
     </section>
     <section class="texte-2">
       <section class="container-2">
-        <section class = "gauche">
-          <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class"img-gauche">
-        <section class = "droite">
+        <section class = "Gauche">
+          <h3>Présentation</h3>
+          <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
+        <section class = "Droite">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id porttitor odio. Nullam ullamcorper molestie mauris eu vulputate. Etiam lobortis massa a egestas volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam vitae lacus mauris. Donec gravida velit id lacus convallis varius. Integer eu ultricies enim. Praesent molestie nulla ipsum, sed fringilla lacus dapibus vel.</p>
         </section>
       </section>
