--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
       <h1>Le metier de DJ</h1>
     </section>
     <section class="texte-1">
-      <p>Un DJ aussi appellé Disque Jockey est un metier qui consiste à annimer une céromonie, un anniversaire ou encore des mariages.
+      <p>Le metier de  DJ aussi appellé Disc Jockey consiste à animer une soirée, un anniversaire ou encore un mariage.
         Les DJ sont la plupart du temps soumis à la réglementation de la SACEM (Sociéte des Auteurs, Compositeurs et Éditeurs de musiques).
-        Certaines personnes classifient les DJ en deux catégories ceux qui travaille en tant qu'annimateur dans les evenements ponctuel et les DJ
-        qui travaille dans des Clubs/Boite de Nuit/Festivals.
-        Jusqu'a présent il n'existe encore aucun diplôme de DJ cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" id="link">UCPA</a> délivre un certificat "d'animateur musical et scénique"
+        Certaines personnes classifient les DJ en deux catégories ceux qui travaillent en tant qu'animateur dans les événements ponctuels et les DJ
+        qui travaillent dans des Clubs/Boites de Nuit/Festivals.
+        Jusqu'à présent, il n'existe encore aucun diplôme de DJ, cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" id="link">UCPA</a> délivre un certificat "d'animateur musical et scénique"
 
       </p>
     </section>
     <section class="texte-2">
+
       <section class="container-2">
         <section class = "Gauche">
           <h3>Présentation</h3>
           <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
-        <section class = "Droite">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam id porttitor odio. Nullam ullamcorper molestie mauris eu vulputate. Etiam lobortis massa a egestas volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Nam vitae lacus mauris. Donec gravida velit id lacus convallis varius. Integer eu ultricies enim. Praesent molestie nulla ipsum, sed fringilla lacus dapibus vel.</p>
-        </section>
       </section>
+      <section class = "Droite">
+        <h3>Présentation</h3>
+        <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
+    </section>
     </section>
   </article>
   </main>
