Add music player and content

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>Le metier de DJ</h1>
     </section>
     <section class="texte-1">
-      <p>Le metier de  DJ aussi appellé Disc Jockey consiste à animer une soirée, un anniversaire ou encore un mariage.
+      <p>Le metier de  DJ diminutif de Disc Jockey consiste à animer une soirée, un anniversaire ou encore un mariage.
         Les DJ sont la plupart du temps soumis à la réglementation de la SACEM (Sociéte des Auteurs, Compositeurs et Éditeurs de musiques).
         Certaines personnes classifient les DJ en deux catégories ceux qui travaillent en tant qu'animateur dans les événements ponctuels et les DJ
         qui travaillent dans des Clubs/Boites de Nuit/Festivals.
@@ -32,15 +32,26 @@
       </p>
     </section>
     <section class="texte-2">
-
+      <h2 class = "center">Les deux catégories</h2>
       <section class="container-2">
         <section class = "Gauche">
-          <h3>Présentation</h3>
+          <h3>En Festivals/ Boites de nuit</h3>
+          <br>
           <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
+          <br>
+          <p>Quand on parle de DJ la plupart des gens pensent à David Guetta, Avicii, Martin Garrix et bien d'autres, alors que tout ces grands
+          artistes DJ dont on parle un peu plus dans la catégorie <a href="artiste-dj.html" id="link"> Artistes DJ</a>, se sont fait connaitre
+        des tubes interplanetaires, il y a néanmoins d'autre DJ qui font de bonne préstation dans les boîtes de nuits, qui peuvent se faire de plus
+        en plus connaitre gràce au réseaux sociaux. Juste en dessous vous pouvez écouter un morceau d'un DJ de boite de Festivals qui se nomme
+      JLOW</p>
+      <br>
+      <audio class ="left" controls src="https://download2299.mediafire.com/7jso3b3po5mg/n2jt1pxrafxthbz/squid-game-x-dont-let-me-down.mp3"></audio>
       </section>
+
       <section class = "Droite">
-        <h3>Présentation</h3>
-        <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
+        <h3>Animateurs d'evenements </h3>
+        <br>
+        <img src="https://imgur.com/jAEV9ym.jpg" alt="Dj-About" class="img-gauche">
     </section>
     </section>
   </article>
