Add Artiste-dj.html and change apparence of audio player

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html >
 <html lang ="fr">
 <head>
-  <meta charset ="UTF-8"/>
+  <meta charset ="UTF-8">
   <title>Le metier de DJ</title>
   <link rel="shortcut icon" href="images/favicon.png">
   <link rel="stylesheet" href="css/index.css">
@@ -12,10 +12,10 @@
     <article class="container">
       <section class="Menu">
         <ul>
-          <li><img src="images/favicon.png" height="100" width="100" class="image_nav">
+          <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a class="active" href="#home">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
-          <li><a href="#contact">Historique</a></li>
+          <li><a href="artiste-dj.html">Artiste DJ</a></li>
           <li><a href="#about">Source</a></li>
         </ul>
       </section>
@@ -27,7 +27,7 @@
         Les DJ sont la plupart du temps soumis à la réglementation de la SACEM (Sociéte des Auteurs, Compositeurs et Éditeurs de musiques).
         Certaines personnes classifient les DJ en deux catégories ceux qui travaillent en tant qu'animateur dans les événements ponctuels et les DJ
         qui travaillent dans des Clubs/Boites de Nuit/Festivals.
-        Jusqu'à présent, il n'existe encore aucun diplôme de DJ, cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" id="link">UCPA</a> délivre un certificat "d'animateur musical et scénique"
+        Jusqu'à présent, il n'existe encore aucun diplôme de DJ, cependant l'Ecole des DJ de l'<a href="http://www.ecole-des-dj.com/" class="link">UCPA</a> délivre un certificat "d'animateur musical et scénique"
 
       </p>
     </section>
@@ -40,7 +40,7 @@
           <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
           <br>
           <p>Quand on parle de DJ la plupart des gens pensent à David Guetta, Avicii, Martin Garrix et bien d'autres, alors que tout ces grands
-          artistes DJ dont on parle un peu plus dans la catégorie <a href="artiste-dj.html" id="link"> Artistes DJ</a>, se sont fait connaitre
+          artistes DJ dont on parle un peu plus dans la catégorie <a href="artiste-dj.html" class="link"> Artistes DJ</a>, se sont fait connaitre
         des tubes interplanetaires, il y a néanmoins d'autre DJ qui font de bonne préstation dans les boîtes de nuits, qui peuvent se faire de plus
         en plus connaitre gràce au réseaux sociaux. Juste en dessous vous pouvez écouter un morceau d'un DJ de boite de Festivals qui se nomme
       JLOW</p>
@@ -54,6 +54,7 @@
         <img src="https://imgur.com/jAEV9ym.jpg" alt="Dj-About" class="img-gauche">
     </section>
     </section>
+  </section>
   </article>
   </main>
 </body>
