--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -4,7 +4,7 @@
   <meta charset ="UTF-8">
   <title>Hello World</title>
   <link rel="shortcut icon" href="images/favicon.png">
-  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/artistes.css">
 </head>
 <body>
   <main>
@@ -12,11 +12,14 @@
         <ul>
           <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a href="index.html">Accueil</a></li>
-          <li><a class="active" href="#home">Materiel</a></li>
-          <li><a href="artiste-dj.html">Artiste DJ</a></li>
+          <li><a href="materiel.html">Materiel</a></li>
+          <li><a class="active" href="#home">Artiste DJ</a></li>
           <li><a href="#about">Source</a></li>
         </ul>
     </nav>
+    <section class="Titre">
+      <h1>Les DJ Connus</h1>
+    </section>
 
   </main>
 </body>
