Add David Guetta Section

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -20,6 +20,24 @@
     <section class="Titre">
       <h1>Les DJ Connus</h1>
     </section>
+    <article class="container">
+      <section class="David-Guetta">
+        <p>Test David Guetta</p>
+        <audio controls src="https://download856.mediafire.com/nkvhisjzvymg/8sexihvixfhjjyw/im-good-blue.mp3"></audio>
+      </section>
+      <section class="Avicii">
+        <p>Test Avicii</p>
+      </section>
+      <section class="AVB">
+        <p>Test Armim Van Buren</p>
+      </section>
+      <section class="Martin-Garrix">
+        <p>Martin Garrix</p>
+      </section>
+      <section class="SOL">
+        <p>Test Sound Of Legend</p>
+      </section>
+    </article>
 
   </main>
 </body>
