Add Music player on DJ-Artiste.html

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -23,19 +23,23 @@
     <article class="container">
       <section class="David-Guetta">
         <p>Test David Guetta</p>
-        <audio controls src="https://download856.mediafire.com/nkvhisjzvymg/8sexihvixfhjjyw/im-good-blue.mp3"></audio>
+        <audio controls src="https://download856.mediafire.com/nkvhisjzvymg/8sexihvixfhjjyw/im-good-blue.mp3" class = "DG"></audio>
       </section>
       <section class="Avicii">
         <p>Test Avicii</p>
+        <audio controls src="https://download1501.mediafire.com/5e2tb20isrug/oqy7a8e7wcketnl/avicii-the-nights-lyrics.mp3" class = "avicii-song"></audio>
       </section>
       <section class="AVB">
         <p>Test Armim Van Buren</p>
+        <audio controls src="https://download1486.mediafire.com/ygd8gbd4e0tg/ge5z9z3sp8cigmk/armin-van-buuren-blah-blah-blah-official-lyric-video.mp3" class = "avb-song"></audio>
       </section>
       <section class="Martin-Garrix">
         <p>Martin Garrix</p>
+        <audio controls src="https://download1654.mediafire.com/438a47pntuxg/doxum8jedjdcokd/martin-garrix-animals-official-lyrics-video.mp3" class = "mg-song"></audio>
       </section>
       <section class="SOL">
         <p>Test Sound Of Legend</p>
+        <audio controls src="https://download942.mediafire.com/1lvk2drpxhbg/qmfyu12hnxdl25w/sound-of-legend-im-so-excited-official-lyrics-video.mp3" class = "sol-song"></audio>
       </section>
     </article>
 
