Change audio player Add Dj-Connus.html

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -22,24 +22,87 @@
     </section>
     <article class="container">
       <section class="David-Guetta">
-        <p>Test David Guetta</p>
-        <audio controls src="https://download856.mediafire.com/nkvhisjzvymg/8sexihvixfhjjyw/im-good-blue.mp3" class = "DG"></audio>
+        <h2>David Guetta</h2>
+        <br>
+        <img src="https://i.imgur.com/dw8QVrO.jpg" class="artistes" alt="David Guetta">
+        <br>
+        <p>David Guetta est un artiste DJ mondialement connu notament pour ses titres Bad ou
+        Titanium. David Guetta est né le 7 Novembre 1967 à Paris sous le nom de Pierre David Guetta.
+        Il a pu faire de nombreux duo notament avec Zara Larson à l'occassion du championat d'europe en 2016.
+        On peut aussi le retrouver dans des remix comme par exemple celui-ci comme on retrouve en dessous,
+        un remix de la chanson Blue de Effiel 65, qu'il remixé avec Bebe Rexha.
+        </p>
+        <br>
+        <audio controls src="https://hogcraft.fr/files/but/david-guetta.mp3" class = "DG"></audio>
+        <br>
       </section>
       <section class="Avicii">
-        <p>Test Avicii</p>
-        <audio controls src="https://download1501.mediafire.com/5e2tb20isrug/oqy7a8e7wcketnl/avicii-the-nights-lyrics.mp3" class = "avicii-song"></audio>
+        <h2>Avicii</h2>
+        <br>
+        <img src="https://i.imgur.com/lO6UuhS.jpg" class="artistes" alt="Avicii">
+        <br>
+        <p>Avicii est un artiste DJ suédois, on lui doit les titres Hey Brother et Wainting for Love.
+           Avicii est né le 8 septembre 1989 et est mort le 20 avril 2018 à 28 ans. La cause de son décès reste
+           toujours flou 4 ans après. Sa famille évoquant un suicide alors que son manager n'a jamais comuniqué sur celle-ci.
+           Ses musiques de type sont mondialement connus. On peut voir une de ses musiques ci-dessous,
+           The nights sortie en 2014 juste avant The Day sortie elle en 2015.
+        <p>
+        <br>
+        <audio controls src="https://hogcraft.fr/files/but/avicii.mp3" class = "avicii-song"></audio>
       </section>
       <section class="AVB">
-        <p>Test Armim Van Buren</p>
-        <audio controls src="https://download1486.mediafire.com/ygd8gbd4e0tg/ge5z9z3sp8cigmk/armin-van-buuren-blah-blah-blah-official-lyric-video.mp3" class = "avb-song"></audio>
+        <h2>Armim Van Buren</h2>
+        <br>
+        <img src="https://i.imgur.com/SSR3Sth.jpg" class="artistes" alt="Avicii">
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Aliquam suscipit nulla metus, id mattis turpis convallis eget.
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+          Proin sed sodales ante.
+          Donec pulvinar et massa a pharetra.
+          Phasellus euismod nec sapien sed ornare.
+          Donec a dictum libero, sed malesuada ex.
+          Cras convallis vulputate elit, vitae malesuada urna placerat sed.
+          Nam aliquet aliquam nulla. Quisque sodales.
+          <p>
+        <br>
+        <audio controls src="https://hogcraft.fr/files/but/armin-van-buuren.mp3" class = "avb-song"></audio>
       </section>
-      <section class="Martin-Garrix">
-        <p>Martin Garrix</p>
-        <audio controls src="https://download1654.mediafire.com/438a47pntuxg/doxum8jedjdcokd/martin-garrix-animals-official-lyrics-video.mp3" class = "mg-song"></audio>
+      <section class="Alan-Walker">
+        <h2>Alan Walker</h2>
+        <br>
+        <img src="https://i.imgur.com/EyhqSXS.jpg" class="artistes" alt="Avicii">
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Aliquam suscipit nulla metus, id mattis turpis convallis eget.
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+          Proin sed sodales ante.
+          Donec pulvinar et massa a pharetra.
+          Phasellus euismod nec sapien sed ornare.
+          Donec a dictum libero, sed malesuada ex.
+          Cras convallis vulputate elit, vitae malesuada urna placerat sed.
+          Nam aliquet aliquam nulla. Quisque sodales.
+          <p>
+        <br>
+        <audio controls src="https://hogcraft.fr/files/but/alan-walker.mp3" class = "aw-song"></audio>
       </section>
       <section class="SOL">
-        <p>Test Sound Of Legend</p>
-        <audio controls src="https://download942.mediafire.com/1lvk2drpxhbg/qmfyu12hnxdl25w/sound-of-legend-im-so-excited-official-lyrics-video.mp3" class = "sol-song"></audio>
+        <h2>Sound Of Legend</h2>
+        <br>
+        <img src="images/sol.png" class="artistes" alt="Avicii">
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          Aliquam suscipit nulla metus, id mattis turpis convallis eget.
+          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
+          Proin sed sodales ante.
+          Donec pulvinar et massa a pharetra.
+          Phasellus euismod nec sapien sed ornare.
+          Donec a dictum libero, sed malesuada ex.
+          Cras convallis vulputate elit, vitae malesuada urna placerat sed.
+          Nam aliquet aliquam nulla. Quisque sodales.
+          <p>
+        <br>
+        <audio controls src="https://hogcraft.fr/files/but/sound-of-legend.mp3" class = "sol-song"></audio>
       </section>
     </article>
 
