--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </ul>
       </section>
       <section class="Titre">
-      <h1>Le metier de DJ</h1>
+      <h1>Le métier de DJ</h1>
     </section>
     <section class="texte-1">
       <p>Le metier de  DJ diminutif de Disc Jockey consiste à animer une soirée, un anniversaire ou encore un mariage.
@@ -35,26 +35,35 @@
       <h2 class = "center">Les deux catégories</h2>
       <section class="container-2">
         <section class = "Gauche">
-          <h3>En Festivals/ Boites de nuit</h3>
+          <h3>En Festivals/ En boites de nuit</h3>
           <br>
           <img src="https://i.imgur.com/kUI40gz.jpg" alt="Dj-About" class="img-gauche">
           <br>
-          <p>Quand on parle de DJ la plupart des gens pensent à David Guetta, Avicii, Martin Garrix et bien d'autres, alors que tout ces grands
-          artistes DJ dont on parle un peu plus dans la catégorie <a href="artiste-dj.html" class="link"> Artistes DJ</a>, se sont fait connaitre
-        des tubes interplanetaires, il y a néanmoins d'autre DJ qui font de bonne préstation dans les boîtes de nuits, qui peuvent se faire de plus
-        en plus connaitre gràce au réseaux sociaux. Juste en dessous vous pouvez écouter un morceau d'un DJ de boite de Festivals qui se nomme
-      JLOW</p>
+          <p>Quand on parle de DJ, la plupart des gens pensent à David Guetta, Avicii, Martin Garrix et bien d'autres. Alors que tout ces grands
+          artistes DJ (Voir la page <a href="artiste-dj.html" class="link"> Artistes DJ</a>), se sont fait connaitre grâce à
+          tubes interplanetaires. Il reste néanmoins d'autres DJ qui font de bonnes préstations dans le monde de la nuit, leurs activitées pouvant
+          croitre grâce au réseaux sociaux. Ci-dessous un extrait d'un DJ de boite de nuit et de festivals qui se nomme JLOW</p>
       <br>
-      <audio class ="left" controls src="https://download2299.mediafire.com/ssd9npw2jsxg/n2jt1pxrafxthbz/squid-game-x-dont-let-me-down.mp3"></audio>
+      <audio class ="left" controls src="https://hogcraft.fr/files/but/jlow.mp3"></audio>
       </section>
 
       <section class = "Droite">
-        <h3>Animateurs d'evenements </h3>
+        <h3>Animateurs d'événements </h3>
         <br>
         <img src="https://imgur.com/jAEV9ym.jpg" alt="Dj-About" class="img-gauche">
+        <br>
+        <p>Les animateurs d'evenements sont aussi appelés DJ. Il composent peu voir pas de musique comme pourrais le faire un DJ travaillant
+        dans des boîtes de nuit, les annimateurs d'evenements vont animer les soirées, les mariage ainsi que tout autres evenements. Il peuvent
+        proposé des préstation en plus de celle de l'ambiance musicale de la soirée, comme par exemple un écran géant sur lequel le public
+        choisis les photos diffuser sur celui-ci.</p>
     </section>
     </section>
   </section>
+    <footer class="footer">
+      <br>
+      <p>Dorey Grégoire BUT RT 1A</p>
+      <br>
+    </footer>
   </article>
   </main>
 </body>
