Add footer on page

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -2,7 +2,7 @@
 <html lang ="fr">
 <head>
   <meta charset ="UTF-8">
-  <title>Hello World</title>
+  <title>DJ Connus</title>
   <link rel="shortcut icon" href="images/favicon.png">
   <link rel="stylesheet" href="css/artistes.css">
 </head>
@@ -104,6 +104,11 @@
         <br>
         <audio controls src="https://hogcraft.fr/files/but/sound-of-legend.mp3" class = "sol-song"></audio>
       </section>
+      <footer class="footer">
+        <br>
+        <p>Dorey Grégoire BUT RT 1A</p>
+        <br>
+      </footer>
     </article>
 
   </main>
