end of page artiste-dj.html

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -14,7 +14,7 @@
           <li><a href="index.html">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
           <li><a class="active" href="#home">Artiste DJ</a></li>
-          <li><a href="#about">Source</a></li>
+          <li><a href="source.html">Source</a></li>
         </ul>
     </nav>
     <section class="Titre">
@@ -53,54 +53,50 @@
       <section class="AVB">
         <h2>Armim Van Buren</h2>
         <br>
-        <img src="https://i.imgur.com/SSR3Sth.jpg" class="artistes" alt="Avicii">
+        <img src="https://i.imgur.com/SSR3Sth.jpg" class="artistes" alt="AVB">
         <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Aliquam suscipit nulla metus, id mattis turpis convallis eget.
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-          Proin sed sodales ante.
-          Donec pulvinar et massa a pharetra.
-          Phasellus euismod nec sapien sed ornare.
-          Donec a dictum libero, sed malesuada ex.
-          Cras convallis vulputate elit, vitae malesuada urna placerat sed.
-          Nam aliquet aliquam nulla. Quisque sodales.
-          <p>
+        <p>Armin Van Bureen est un Disck Jockey hollandais. Son titre le plus connu est Blah, Blah, Blah ,Blah un titre
+          de style plutot éléctro. Armin van Bureen est né le 25 décembre 1976 à Leyde au Pays-Bas. Il a commençais sa
+          carrière de DJ au club Nexus.
+          Il est principalement inspiré du Disck Jockey français Jean-Michel Jarre on peut notament retrouvé
+          certaines notes des chansons de Jean-Michel Jarre dans la chanson Blah Blah Blah Blah ce trouvant ci-dessous.
+        <p>
+        <br>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/armin-van-buuren.mp3" class = "avb-song"></audio>
       </section>
       <section class="Alan-Walker">
         <h2>Alan Walker</h2>
         <br>
-        <img src="https://i.imgur.com/EyhqSXS.jpg" class="artistes" alt="Avicii">
+        <img src="https://i.imgur.com/EyhqSXS.jpg" class="artistes" alt="Alan-Walker">
         <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Aliquam suscipit nulla metus, id mattis turpis convallis eget.
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-          Proin sed sodales ante.
-          Donec pulvinar et massa a pharetra.
-          Phasellus euismod nec sapien sed ornare.
-          Donec a dictum libero, sed malesuada ex.
-          Cras convallis vulputate elit, vitae malesuada urna placerat sed.
-          Nam aliquet aliquam nulla. Quisque sodales.
-          <p>
+        <p>
+          Alan Walker est un artiste DJ autrefois connu sous le nom DJ Walkzz britanico-norvégien.
+          Il est né le 24 août 1997 à Northampton en Angleterre.
+          Alan Walker gagne en noteriété en 2015 avec son tube Faded un de ses titre les plus connus mais on peut notament
+          cité le titre Ignite en featuring avec K-391. En 2014 il signe un contrat avec
+          le label NoCopyrightSong (NCS).
+        <p>
+        <br>
+        <br>
+        <br>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/alan-walker.mp3" class = "aw-song"></audio>
       </section>
       <section class="SOL">
         <h2>Sound Of Legend</h2>
         <br>
-        <img src="images/sol.png" class="artistes" alt="Avicii">
+        <img src="images/sol.png" class="artistes" alt="SOL">
+        <p class = "legende">(Sound of Legend lors d'un concert en plein air à Granville (50))</p>
         <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          Aliquam suscipit nulla metus, id mattis turpis convallis eget.
-          Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-          Proin sed sodales ante.
-          Donec pulvinar et massa a pharetra.
-          Phasellus euismod nec sapien sed ornare.
-          Donec a dictum libero, sed malesuada ex.
-          Cras convallis vulputate elit, vitae malesuada urna placerat sed.
-          Nam aliquet aliquam nulla. Quisque sodales.
-          <p>
+        <p>
+          Sound of Legend est un groupe de musique. Dont l'artiste principal se nome Zach, ce chanteur se
+          fait passer pour un super héros. Il se fait passer pour un super héros jusqu'a sur scène car il
+          se présente toujours masqué. Sound Of Legend n'ont pas crée de nouveau titre, il se contentent de
+          remixé les titres existant on peut notament cité :
+          Maniac sortit en 2022
+          ou encore I'm so excited sortit en octobre 2022 qu'on l'on peut écouté juste en dessous.
+        <p>
         <br>
         <audio controls src="https://hogcraft.fr/files/but/sound-of-legend.mp3" class = "sol-song"></audio>
       </section>
