--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <li><a class="active" href="#home">Accueil</a></li>
           <li><a href="materiel.html">Materiel</a></li>
           <li><a href="artiste-dj.html">Artiste DJ</a></li>
-          <li><a href="#about">Source</a></li>
+          <li><a href="source.html">Source</a></li>
         </ul>
       </section>
       <section class="Titre">
