--- a/source.html
+++ b/source.html
@@ -2,9 +2,9 @@
 <html lang ="fr">
 <head>
   <meta charset ="UTF-8">
-  <title>Le matériel</title>
+  <title>Hello World</title>
   <link rel="shortcut icon" href="images/favicon.png">
-  <link rel="stylesheet" href="css/materiel.css">
+  <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
   <main>
@@ -12,19 +12,11 @@
         <ul>
           <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a href="index.html">Accueil</a></li>
-          <li><a class="active" href="#home">Materiel</a></li>
+          <li><a href="materiel.html">Materiel</a></li>
           <li><a href="artiste-dj.html">Artiste DJ</a></li>
-          <li><a href="source.html">Source</a></li>
+          <li><a class="active" href="#home">Source</a></li>
         </ul>
     </nav>
-    <article class="container">
-      <section class="Titre">
-          <h1>Le materiel d'un DJ</h1>
-      </section>
-      <section class = "contenue">
-        <p>Test du materiel</p>
-      </section>
-    </article>
 
   </main>
 </body>
