Change container name

--- a/artiste-dj.html
+++ b/artiste-dj.html
@@ -20,7 +20,7 @@
     <section class="Titre">
       <h1>Les DJ Connus</h1>
     </section>
-    <article class="container">
+    <article class="principal">
       <section class="David-Guetta">
         <h2>David Guetta</h2>
         <br>
