--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <main>
-    <article class="container">
+    <article class="principal">
       <section class="Menu">
         <ul>
           <li><img src="images/favicon.png" height="100" width="100" class="image_nav" alt="Image Logo">
@@ -33,7 +33,7 @@
     </section>
     <section class="texte-2">
       <h2 class = "center">Les deux catégories</h2>
-      <section class="container-2">
+      <section class="secondaire">
         <section class = "Gauche">
           <h3>En Festivals/ En boites de nuit</h3>
           <br>
