Change border radius

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <main>
     <article class="principal">
-      <section class="Menu">
+      <section>
         <ul>
           <li><img src="https://i.imgur.com/UFXLrXH.png" height="100" width="100" class="image_nav" alt="Image Logo">
           <li><a class="active" href="#home">Accueil</a></li>
